--- a/Parkinson_Detection.ipynb
+++ b/Parkinson_Detection.ipynb
@@ -14,8 +14,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AHb-pkbZ468G",
-        "outputId": "c193ef27-3a3e-4613-f5a4-28726408b4a0"
+        "id": "ozwjXtmQbLgV",
+        "outputId": "f1933167-c5d5-4188-ad67-122568ef1b11"
       },
       "outputs": [
         {
@@ -40,7 +40,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "f6SWNW5q468S"
+        "id": "sgFOyh4FbLgZ"
       },
       "outputs": [],
       "source": [
@@ -59,8 +59,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9TIUQ-9k468T",
-        "outputId": "1a103e9f-bf2e-4f22-991a-c0c85597eabd"
+        "id": "bcP3Wrj3bLga",
+        "outputId": "1dc2f98e-6996-48eb-bb71-f445b4a26e83"
       },
       "outputs": [
         {
@@ -420,8 +420,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "sHnI-7I6468U",
-        "outputId": "20cfda21-871e-48f8-8276-4fc670476c88"
+        "id": "q0rInmgObLgb",
+        "outputId": "58a85f2a-8703-49a0-8259-bdc872549ead"
       },
       "outputs": [
         {
@@ -444,8 +444,8 @@
       "execution_count": null,
       "metadata": {
         "scrolled": true,
-        "id": "HNECRt56468V",
-        "outputId": "6905ca4f-0cf0-4cbf-fd72-8886205f3d7c"
+        "id": "FWLECkz7bLgc",
+        "outputId": "ce5dc898-694c-4a70-98b0-4da8729b8895"
       },
       "outputs": [
         {
@@ -494,8 +494,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "gjwMB3v2468V",
-        "outputId": "bb6f4ba6-b942-4b8f-c187-74c0db04a646"
+        "id": "kP913-aPbLgc",
+        "outputId": "58175630-7363-4c73-96dc-e616b0dc08fd"
       },
       "outputs": [
         {
@@ -797,21 +797,21 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SwNohyqX468W"
+        "id": "bN6jOJVqbLgd"
       },
       "outputs": [],
       "source": [
         "#Get the features and labels\n",
-        "features = data.loc[:,data.columns!='status'].values[:,1:]\n",
-        "y = data.loc[:,'status'].values"
+        "features=data.loc[:,data.columns!='status'].values[:,1:]\n",
+        "y=data.loc[:,'status'].values"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AYN2NB6x468W",
-        "outputId": "c9a02608-a673-4e32-d846-57fd1f43889c"
+        "id": "wTyb0hGtbLgd",
+        "outputId": "00d3966c-c8c1-424d-9fbd-a20d857f0428"
       },
       "outputs": [
         {
@@ -824,14 +824,15 @@
       ],
       "source": [
         "#Get the count of each label (0 and 1) in labels\n",
-        "print('Number of ones: ', y[y==1].shape[0], ' and number of zeros is: ', y[y==0].shape[0])"
+        "print('Number of ones: ', y[y==1].shape[0], ' and number of zeros is: ',\n",
+        "      y[y==0].shape[0])"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vi1yrJrP468X"
+        "id": "aMyKOGGTbLge"
       },
       "outputs": [],
       "source": [
@@ -847,22 +848,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "7Hs110C0468Y"
+        "id": "65cS0Qq5bLgf"
       },
       "outputs": [],
       "source": [
         "#Split the data into test and train\n",
-        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=7)"
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "4b2Ls7qq468Y",
-        "outputId": "8e23121c-666d-4520-db74-0f04a245a3ef"
+        "id": "j9IhVjP0bLgg",
+        "outputId": "9343f2a0-55cd-4d5e-c492-113ac55e926f"
       },
       "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[16:19:52] WARNING: ../src/learner.cc:1095: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'binary:logistic' was changed from 'error' to 'logloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+          ]
+        },
         {
           "name": "stderr",
           "output_type": "stream",
@@ -872,35 +880,61 @@
           ]
         },
         {
-          "ename": "ValueError",
-          "evalue": "y should be a 1d array, got an array of shape (156, 22) instead.",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-5c79af625c34>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/xgboost/core.py\u001b[0m in \u001b[0;36minner_f\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    434\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    435\u001b[0m             \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 436\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    437\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    438\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0minner_f\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/xgboost/sklearn.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight, base_margin, eval_set, eval_metric, early_stopping_rounds, verbose, xgb_model, sample_weight_eval_set, base_margin_eval_set, feature_weights, callbacks)\u001b[0m\n\u001b[1;32m   1145\u001b[0m                                  label_encoder_deprecation_msg)\n\u001b[1;32m   1146\u001b[0m             \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabel_encoder_deprecation_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mUserWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1147\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_le\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mXGBoostLabelEncoder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1148\u001b[0m             \u001b[0mlabel_transform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_le\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1149\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sklearn/preprocessing/_label.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m     96\u001b[0m             \u001b[0mFitted\u001b[0m \u001b[0mlabel\u001b[0m \u001b[0mencoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m         \"\"\"\n\u001b[0;32m---> 98\u001b[0;31m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwarn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_unique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcolumn_or_1d\u001b[0;34m(y, warn)\u001b[0m\n\u001b[1;32m   1023\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1024\u001b[0m     raise ValueError(\n\u001b[0;32m-> 1025\u001b[0;31m         \u001b[0;34m\"y should be a 1d array, got an array of shape {} instead.\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1026\u001b[0m     )\n\u001b[1;32m   1027\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: y should be a 1d array, got an array of shape (156, 22) instead."
-          ]
+          "data": {
+            "text/plain": [
+              "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+              "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+              "              importance_type='gain', interaction_constraints='',\n",
+              "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+              "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+              "              n_estimators=100, n_jobs=4, num_parallel_tree=1, random_state=0,\n",
+              "              reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+              "              tree_method='exact', validate_parameters=1, verbosity=None)"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "#train the model\n",
         "model = XGBClassifier()\n",
-        "model.fit(y_train,x_train)"
+        "model.fit(x_train,y_train)"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "g8LOx5yV468Z"
+        "id": "36tq3HbGbLgh",
+        "outputId": "30dee4d8-271b-4d8a-d7fe-54b53141be1d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "94.87179487179486\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Calculate the accuracy \n",
+        "y_pred = model.predict(x_test)\n",
+        "print(accuracy_score(y_test, y_pred)*100)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2GEFm4S4bLgi"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "\n"
+      ]
     }
   ],
   "metadata": {
